Bug 119887 - [Soup] The testing NetworkStorageSession should have a proper SoupSession
Summary: [Soup] The testing NetworkStorageSession should have a proper SoupSession
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Zan Dobersek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-16 02:59 PDT by Zan Dobersek
Modified: 2013-08-16 11:52 PDT (History)
8 users (show)

See Also:


Attachments
Patch (6.76 KB, patch)
2013-08-16 03:12 PDT, Zan Dobersek
mrobinson: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Zan Dobersek 2013-08-16 02:59:42 PDT
[Soup] The testing NetworkStorageSession should have a proper SoupSession
Comment 1 Zan Dobersek 2013-08-16 03:12:34 PDT
Created attachment 208901 [details]
Patch
Comment 2 Martin Robinson 2013-08-16 07:13:40 PDT
Comment on attachment 208901 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=208901&action=review

Does this cause any new tests to pass or does it fix some tests that are failing?

> Source/WebCore/ChangeLog:3
> +        <https://webkit.org/b/119887> [Soup] The testing NetworkStorageSession should have a proper SoupSession

The description field is a little funky.

> Source/WebCore/ChangeLog:11
> +        NetworkStorageSession, which ends up being null if the testing-specific NetworkStorageSession is sued.

s/sued/used
Comment 3 Sergio Villar Senin 2013-08-16 09:38:13 PDT
(In reply to comment #2)
> > Source/WebCore/ChangeLog:3
> > +        <https://webkit.org/b/119887> [Soup] The testing NetworkStorageSession should have a proper SoupSession
> 
> The description field is a little funky.

Actually it is not, the format changed recently
Comment 4 Zan Dobersek 2013-08-16 10:51:23 PDT
(In reply to comment #2)
> (From update of attachment 208901 [details])
> View in context: https://bugs.webkit.org/attachment.cgi?id=208901&action=review
> 
> Does this cause any new tests to pass or does it fix some tests that are failing?
> 

There's a bit of a fallout:
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20WK2%20(Tests)/r154155%20(7763)/results.html

Basically, the ResourceHandleInternal's SoupSession is now null, causing crashes:
STDERR: g_object_get_data: assertion `G_IS_OBJECT (object)' failed
STDERR: g_object_set_data: assertion `G_IS_OBJECT (object)' failed
STDERR: soup_session_request_uri: assertion `SOUP_IS_SESSION (session)' failed
STDERR: g_object_set_data_full: assertion `G_IS_OBJECT (object)' failed

> > Source/WebCore/ChangeLog:3
> > +        <https://webkit.org/b/119887> [Soup] The testing NetworkStorageSession should have a proper SoupSession
> 
> The description field is a little funky.
> 

The formatting or the bug title? Formatting was changed just recently, looks nicer IMO.
Comment 5 Zan Dobersek 2013-08-16 11:52:05 PDT
Committed r154197: <http://trac.webkit.org/changeset/154197>